--- a/Reaction/Reaction/Base.lproj/Main.storyboard
+++ b/Reaction/Reaction/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E17e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BO7-0Q-kkB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BO7-0Q-kkB">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -56,6 +56,19 @@
                                     <action selector="go:" destination="0pM-H8-Dyl" eventType="touchUpInside" id="qfF-34-xtc"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1RX-au-P69">
+                                <rect key="frame" x="520" y="519" width="40" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="aRY-eh-N78"/>
+                                    <constraint firstAttribute="width" constant="40" id="yYS-fv-bvm"/>
+                                </constraints>
+                                <state key="normal" image="gamecenter">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showLeaderBoard:" destination="0pM-H8-Dyl" eventType="touchUpInside" id="Lop-vf-jyL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -63,6 +76,8 @@
                             <constraint firstItem="Wt3-YP-2kW" firstAttribute="leading" secondItem="YCV-f4-aQh" secondAttribute="leadingMargin" id="7Rv-c8-API"/>
                             <constraint firstAttribute="centerY" secondItem="PgX-pz-6Ry" secondAttribute="centerY" id="CRy-GH-YBu"/>
                             <constraint firstAttribute="centerX" secondItem="PgX-pz-6Ry" secondAttribute="centerX" constant="-0.5" id="H0v-5L-p2S"/>
+                            <constraint firstAttribute="trailing" secondItem="1RX-au-P69" secondAttribute="trailing" constant="40" id="oMv-Hr-TX7"/>
+                            <constraint firstItem="zzp-wi-clx" firstAttribute="top" secondItem="1RX-au-P69" secondAttribute="bottom" constant="39" id="ok7-sv-gd0"/>
                             <constraint firstItem="Wt3-YP-2kW" firstAttribute="centerX" secondItem="YCV-f4-aQh" secondAttribute="centerX" id="xzH-ys-o3i"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
@@ -82,6 +97,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="4eR-Uv-G9R"/>
                     <connections>
+                        <outlet property="gameCenter" destination="1RX-au-P69" id="98K-zE-HfB"/>
                         <outlet property="goButton" destination="PgX-pz-6Ry" id="E2G-tY-Qpr"/>
                         <outlet property="topScoreLabel" destination="Wt3-YP-2kW" id="8ZQ-N7-ghj"/>
                     </connections>
@@ -141,4 +157,7 @@
             <point key="canvasLocation" x="-303" y="96"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="gamecenter" width="58" height="59"/>
+    </resources>
 </document>
